--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-sanity": "^11.6.8",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "resend": "^6.8.0",
     "sanity": "^4.18.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0"
